==> snu-hanaro/Identity_square/Core/Src/imu/ICM_20948/ICM_20948.cpp <==
#include "imu/ICM_20948/ICM_20948.hpp"
#include "imu/ICM_20948/util/ICM_20948_REGISTERS.h"
#include "imu/ICM_20948/util/AK09916_REGISTERS.h"

ICM_20948_Status_e ICM_20948_I2C::begin(I2C_HandleTypeDef *i2cPort)
{
  // Associate
  _i2c = i2cPort;

  _addr = ICM_20948_I2C_ADDR_AD0;

  // Set up the serif
  _serif.write = ICM_20948_write_I2C;
  _serif.read = ICM_20948_read_I2C;
  _serif.user = (void *)this; // refer to yourself in the user field

  // Link the serif
  _device._serif = &_serif;

#if defined(ICM_20948_USE_DMP)
  _device._dmp_firmware_available = true; // Initialize _dmp_firmware_available
#else
  _device._dmp_firmware_available = false; // Initialize _dmp_firmware_available
#endif

  _device._firmware_loaded = false; // Initialize _firmware_loaded
  _device._last_bank = 255;         // Initialize _last_bank. Make it invalid. It will be set by the first call of ICM_20948_set_bank.
  _device._last_mems_bank = 255;    // Initialize _last_mems_bank. Make it invalid. It will be set by the first call of inv_icm20948_write_mems.
  _device._gyroSF = 0;              // Use this to record the GyroSF, calculated by inv_icm20948_set_gyro_sf
  _device._gyroSFpll = 0;
  _device._enabled_Android_0 = 0;      // Keep track of which Android sensors are enabled: 0-31
  _device._enabled_Android_1 = 0;      // Keep track of which Android sensors are enabled: 32-
  _device._enabled_Android_intr_0 = 0; // Keep track of which Android sensor interrupts are enabled: 0-31
  _device._enabled_Android_intr_1 = 0; // Keep track of which Android sensor interrupts are enabled: 32-

  // Perform default startup
  // Do a minimal startupDefault if using the DMP. User can always call startupDefault(false) manually if required.
  status = startupDefault(_device._dmp_firmware_available);
  if (status != ICM_20948_Stat_Ok)
  {
    debugPrint("ICM_20948_I2C::begin: startupDefault returned: ");
    debugPrintStatus(status);
    debugPrintln("");
  }
  return status;
}

ICM_20948_Status_e ICM_20948_SPI::begin(SPI_HandleTypeDef *spiPort, GPIO_TypeDef* gpioPort, uint16_t csPin, uint32_t SPIFreq)
{
  if (SPIFreq > 7000000)
    SPIFreq = 7000000; // Limit SPI frequency to 7MHz

  // Associate
  _spi = spiPort;
  _gpio = gpioPort;
  _cs = csPin;

  // Set pins to default positions
  HAL_GPIO_WritePin(_gpio, _cs, GPIO_PIN_SET);

  // Set up the serif
  _serif.write = ICM_20948_write_SPI;
  _serif.read = ICM_20948_read_SPI;
  _serif.user = (void *)this; // refer to yourself in the user field

  // Link the serif
  _device._serif = &_serif;

#if defined(ICM_20948_USE_DMP)
  _device._dmp_firmware_available = true; // Initialize _dmp_firmware_available
#else
  _device._dmp_firmware_available = false; // Initialize _dmp_firmware_available
#endif

  _device._firmware_loaded = false; // Initialize _firmware_loaded
  _device._last_bank = 255;         // Initialize _last_bank. Make it invalid. It will be set by the first call of ICM_20948_set_bank.
  _device._last_mems_bank = 255;    // Initialize _last_mems_bank. Make it invalid. It will be set by the first call of inv_icm20948_write_mems.
  _device._gyroSF = 0;              // Use this to record the GyroSF, calculated by inv_icm20948_set_gyro_sf
  _device._gyroSFpll = 0;
  _device._enabled_Android_0 = 0;      // Keep track of which Android sensors are enabled: 0-31
  _device._enabled_Android_1 = 0;      // Keep track of which Android sensors are enabled: 32-
  _device._enabled_Android_intr_0 = 0; // Keep track of which Android sensor interrupts are enabled: 0-31
  _device._enabled_Android_intr_1 = 0; // Keep track of which Android sensor interrupts are enabled: 32-

  // Perform default startup
  // Do a minimal startupDefault if using the DMP. User can always call startupDefault(false) manually if required.
  status = startupDefault(_device._dmp_firmware_available);
  if (status != ICM_20948_Stat_Ok)
  {
    debugPrint("ICM_20948_SPI::begin: startupDefault returned: ");
    debugPrintStatus(status);
    debugPrintln("");
  }

  return status;
}

ICM_20948_Status_e ICM_20948_write_I2C(uint8_t reg, uint8_t *data, uint32_t len, void *user)
{
  if (user == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }
  I2C_HandleTypeDef *_i2c = ((ICM_20948_I2C *)user)->_i2c; // Cast user field to ICM_20948_I2C type and extract the I2C interface pointer
  uint8_t addr = ((ICM_20948_I2C *)user)->_addr;
  if (_i2c == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }

  HAL_I2C_Mem_Write(_i2c, addr << 1, reg, 1, data, len, HAL_MAX_DELAY);

  return ICM_20948_Stat_Ok;
}

ICM_20948_Status_e ICM_20948_read_I2C(uint8_t reg, uint8_t *buff, uint32_t len, void *user)
{
  if (user == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }
  I2C_HandleTypeDef *_i2c = ((ICM_20948_I2C *)user)->_i2c;
  uint8_t addr = ((ICM_20948_I2C *)user)->_addr;
  if (_i2c == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }

  if(HAL_I2C_Mem_Read(_i2c, addr << 1, reg, 1, buff, len, HAL_MAX_DELAY) != HAL_OK)
  {
	return ICM_20948_Stat_NoData;
  }
  return ICM_20948_Stat_Ok;
}

ICM_20948_Status_e ICM_20948_write_SPI(uint8_t reg, uint8_t *data, uint32_t len, void *user)
{
  if (user == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }

  SPI_HandleTypeDef *_spi = ((ICM_20948_SPI *)user)->_spi;
  GPIO_TypeDef *_gpio = ((ICM_20948_SPI *)user)->_gpio;
  uint8_t cs = ((ICM_20948_SPI *)user)->_cs;
  if (_spi == NULL || _gpio == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }

  uint8_t regData = reg & 0x7F;

  HAL_GPIO_WritePin(_gpio, cs, GPIO_PIN_RESET);

  HAL_SPI_Transmit(_spi, &regData, 1, HAL_MAX_DELAY);

  HAL_GPIO_WritePin(_gpio, cs, GPIO_PIN_SET);

  return ICM_20948_Stat_Ok;
}

ICM_20948_Status_e ICM_20948_read_SPI(uint8_t reg, uint8_t *buff, uint32_t len, void *user)
{
  if (user == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }

  SPI_HandleTypeDef *_spi = ((ICM_20948_SPI *)user)->_spi;
  GPIO_TypeDef *_gpio = ((ICM_20948_SPI *)user)->_gpio;
  uint8_t cs = ((ICM_20948_SPI *)user)->_cs;
  if (_spi == NULL || _gpio == NULL)
  {
    return ICM_20948_Stat_ParamErr;
  }


  uint8_t data = ((reg & 0x7F) | 0x80);

  HAL_GPIO_WritePin(_gpio, cs, GPIO_PIN_RESET);

  HAL_SPI_Transmit(_spi, &data, 1, HAL_MAX_DELAY);
  HAL_SPI_Receive(_spi, buff, len, HAL_MAX_DELAY);

  HAL_GPIO_WritePin(_gpio, cs, GPIO_PIN_SET);

  return ICM_20948_Stat_Ok;
}
